--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Wellcome to my first project</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit atque et modi ea vero doloribus distinctio incidunt quibusdam! Tenetur, consequuntur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. consequuntur!</p>
+    <br>
 </body>
 </html>
