--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. consequuntur!</p>
     <br>
     <h3>This is 3nd</h3>
+    <button>Click me</button>
+    <hr>
 </body>
 </html>
